# Magazine-Homepage-PCL

./: .editorconfig  .gitignore  Custom.json  Custom.xaml  Custom.xaml.ini  README.md  hp_builder.py  h望远镜.xaml  main.py  minebbs_builder.py  minebbs_grabber.py  minebbs_image_grabber.py  minebbs_washer.py  pyproject.toml  reloader.py  requirements.txt  template.fstring
.github/workflows/: Sync-to-Alist-via-WebDAV.yml  debug.yml  main.yml
assets/templates/: bbsmain.fstring.xaml  deepdives_link.fstring.xaml  historytoday.fstring.xaml  main.fstring.xaml
history/: h古迹废墟.xaml  h打火石.xaml  h望远镜.xaml  h末影人.xaml
network/: getter.py  requester.py
output/: Custom.xaml  Custom.xaml.ini
output/history/: minecraft-net-deep-dives-10731.json  minecraft-net-deep-dives-10731.xaml  minecraft-net-deep-dives-11499.json  minecraft-net-deep-dives-11499.xaml  minecraft-net-deep-dives-11904.json  minecraft-net-deep-dives-11904.xaml  minecraft-net-deep-dives-11986.json  minecraft-net-deep-dives-11986.xaml  minecraft-net-deep-dives-13350.json  minecraft-net-deep-dives-13350.xaml  minecraft-net-deep-dives-19416.json  minecraft-net-deep-dives-19416.xaml  minecraft-net-deep-dives-20177.json  minecraft-net-deep-dives-20177.xaml  minecraft-net-deep-dives-22485.json  minecraft-net-deep-dives-22485.xaml  minecraft-net-deep-dives-22932.json  minecraft-net-deep-dives-22932.xaml  minecraft-net-deep-dives-23447.json  minecraft-net-deep-dives-23447.xaml  minecraft-net-deep-dives-24186.json  minecraft-net-deep-dives-24186.xaml  (+39 more)
praser/: bs4.py
src/modules/minebbs/: builder.py  (+2 more)
utils/: testutils.py
(+2 files in other folders)
